--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,17 @@
     <meta name="description" content="Hello, World! • A-Frame three.ar.js">
     <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
     <script src="https://rawgit.com/google-ar/three.ar.js/master/dist/three.ar.js"></script>
-    <script src="../dist/aframe-three-ar.js"></script>
+    <script src="https://rawgit.com/chenzlabs/aframe-ar/experimental-planes/dist/aframe-ar.js"></script>
   </head>
   <body>
-    <a-scene three-ar vr-mode-ui="enabled:false">
-      <a-box scale="0.25 0.25 0.25" position="-0.25 0.125 -0.75" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
-      <a-sphere scale="0.25 0.25 0.25" position="0 0.3125 -1.25" radius="1.25" color="#EF2D5E" shadow></a-sphere>
-      <a-cylinder scale="0.25 0.25 0.25" position="0.25 0.1875 -0.75" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
-      <a-plane scale="0.25 0.25 0.25" position="0 0 -1" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
+    <a-scene ar>
+      <a-box id="ground" material="side:double" opacity="0.1" width="3" height="0.001" depth="3"></a-box>
+      <a-box id="onemeter" material="side:double;color:red" opacity="0.1" width="1" height="0.01" depth="1"></a-box>
+      <a-sphere id="ball" radius="0.01" position="0 0.005 -0.5"></a-sphere>
+      
+      <a-camera>
+        <a-text id="hud" position="0 0.15 0.25" value="Hi there"></a-text>
+      </a-camera>
     </a-scene>
   </body>
 </html>
