--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,7 @@
       <a-entity id="background" ar-raycaster></a-entity>
       
       <a-camera>
+        <a-sphere id="dot" radius="0.001" position="0 0 -0.4"></a-sphere>
         <a-text id="hud" 
                 scale="0.01 0.01 0.01" position="0 -0.025 -0.1" 
                 color="red" align="center" 
@@ -157,10 +158,11 @@
         background.addEventListener('raycaster-intersection', function (evt) {
           showHUD('raycaster-intersection');
           ball.setAttribute('position', evt.detail.intersections[0].point);
+          ball.setAttribute('visible', true);
         });
         background.addEventListener('raycaster-intersection-cleared', function (evt) {
           showHUD('raycaster-intersection-cleared');
-          ball.setAttribute('position', "0 0 0");
+          ball.setAttribute('visible', false);
         });
       }
       
