--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <title>Hello, World! • A-Frame three.ar.js</title>
     <meta name="description" content="Hello, World! • A-Frame three.ar.js">
     <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-    <script src="https://rawgit.com/chenzlabs/aframe-ar/experimental-planes/dist/aframe-ar.min.js"></script>
+    <script src="https://rawgit.com/google-ar/three.ar.js/master/dist/three.ar.js"></script>
+    <script src="https://rawgit.com/chenzlabs/aframe-ar/experimental-planes/dist/aframe-ar.js"></script>
   </head>
   <body>    
     <script>
