Exporting to chenzlabs/aframe-ar-plane

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
         <a-entity id="ar-world"></a-entity>
         
         <!-- Declare a cursor, and what objects its raycaster hit (including AR). -->
-        <a-cursor fuse="false" raycaster="objects:.plane; near:0.01" 
+        <a-cursor fuse="false" 
+                  raycaster="objects:.plane; near:0.01" 
                   ar-raycaster="el:#ar-world"></a-cursor>
 
         <!-- Heads-up text display. -->
