--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
     <script src="https://rawgit.com/google-ar/three.ar.js/master/dist/three.ar.js"></script>
     <script src="https://rawgit.com/chenzlabs/aframe-ar/ac3deea/dist/aframe-ar.js"></script>
+    <script src="grid-shader.js"></script>
   </head>
   <body>    
     <script>
@@ -53,7 +54,8 @@
           plane.setAttribute('id', 'plane_' + evt.detail.id);
           plane.setAttribute('class', 'plane');
           plane.setAttribute('color', 'red');
-          plane.setAttribute('opacity', 0.2);
+          plane.setAttribute('opacity', 0.3);
+          plane.setAttribute('material', 'shader:grid')
           plane.setAttribute('height', 0.001);
           sc.appendChild(plane);
           
