--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
       var sc = document.querySelector('a-scene');
       function showHUD(msg) { sc.querySelector('#hud').setAttribute('value', msg); }
       
+      var randomColors = ['red', 'orange', 'yellow', 'green', 'blue', 'violet'];
       function onCreateOrUpdatePlane(evt) {
         var created = false;
         var plane = sc.querySelector('#plane_' + evt.detail.id);
