--- a/public/index.html
+++ b/public/index.html
@@ -52,10 +52,11 @@
         if (!plane) {
           // Create and append the plane.
           created = true;
+          var colorToUse = randomColors[Math.floor(Math.random() * randomColors.length)];
           plane = document.createElement('a-box');
           plane.setAttribute('id', 'plane_' + evt.detail.id);
           plane.setAttribute('class', 'plane');
-          plane.setAttribute('color', 'red');
+          plane.setAttribute('color', colorToUse); //'red');
           plane.setAttribute('opacity', 0.3);
           plane.setAttribute('material', 'shader:grid')
           plane.setAttribute('height', 0.001);
@@ -65,9 +66,9 @@
             // Add a plane label (which needs to be rotated to match a-box).
             '<a-entity class="label" rotation="-90 0 0"></a-entity>' +
             // Add a corner post.
-            '<a-entity class="post1" geometry="primitive:box; width:0.1; depth:0.1; height:0.5"></a-entity>' +
+            '<a-entity class="post1" material="color:' + colorToUse + '" geometry="primitive:box; width:0.1; depth:0.1; height:0.5"></a-entity>' +
             // Add another corner post.
-            '<a-entity class="post2" geometry="primitive:box; width:0.1; depth:0.1; height:0.5"></a-entity>' +
+            '<a-entity class="post2" material="color:' + colorToUse + '" geometry="primitive:box; width:0.1; depth:0.1; height:0.5"></a-entity>' +
             // Add a thing to mark the center of the plane.
             '<a-entity thing></a-entity>');
         }
