--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,29 @@
       });            
     </script>
     
+    <script>
+AFRAME.registerGeometry('example', {
+  schema: {
+    stride: { default: 3 },
+    vertices: { default: [-10,10,0, -10,-10,0, 10,-10,0] }
+  },
+  
+  init: function (data) {
+    var geometry = new THREE.Geometry();
+    geometry.vertices = [];
+    for (var i=0; (i+2)<data.vertices.length; i += stride) {
+      geometry.vertices.push(new THREE.Vector3(data.vertices[i], data.vertices[i+1], data.vertices[i+2]));
+    }
+    geometry.computeBoundingBox();
+    geometry.faces.push(new THREE.Face3(0, 1, 2));
+    geometry.mergeVertices();
+    geometry.computeFaceNormals();
+    geometry.computeVertexNormals();
+    this.geometry = geometry;
+  }
+});      
+    </script>
+    
     <a-scene ar>
       <!-- When we have a raycaster hit, we use this ball to show where. -->
       <a-sphere id="ball" radius="0.01" position="0 0.005 -0.5"></a-sphere>
