--- a/public/index.html
+++ b/public/index.html
@@ -130,8 +130,12 @@ AFRAME.registerGeometry('polygon', {
         // Update the bounding box.
         var dx2 = evt.detail.extent.x / 2.0;
         var dy2 = evt.detail.extent.y / 2.0;
+        if (!plane.v1) { plane.v1 = new THREE.Vector3(); }
+        if (!plane.v2) { plane.v2 = new THREE.Vector3(); }
+        if (!plane.v3) { plane.v3 = new THREE.Vector3(); }
+        if (!plane.v4) { plane.v4 = new THREE.Vector3(); }
         // Maybe it will update properly if the text form is used, like geometry?
-        plane.setAttribute('line__1', {start:{x:dx2, y:0, z:dy2},end:{x:dx2, y:0, z:-dy2}});
+        plane.setAttribute('line__1', {start:v1,end:{x:dx2, y:0, z:-dy2}});
         plane.setAttribute('line__2', {start:{x:dx2, y:0, z:-dy2},end:{x:-dx2, y:0, z:-dy2}});
         plane.setAttribute('line__3', {start:{x:-dx2, y:0, z:-dy2},end:{x:-dx2, y:0, z:dy2}});
         plane.setAttribute('line__4', {start:{x:-dx2, y:0, z:dy2},end:{x:dx2, y:0, z:dy2}});
