--- a/public/index.html
+++ b/public/index.html
@@ -99,8 +99,6 @@ AFRAME.registerGeometry('polygon', {
           plane.insertAdjacentHTML('beforeend',
             // Add a plane label (which needs to be rotated to match a-box).
             '<a-entity class="label" rotation="-90 0 0"></a-entity>' +
-            // Add bounding box (to be made of lines).
-            '<a-entity class="bbox"></a-entity>' +
             // Add a thing to mark the center of the plane.
             '<a-entity thing></a-entity>');
           
@@ -135,25 +133,23 @@ AFRAME.registerGeometry('polygon', {
         }
         
         // Update the bounding box.
+        var y = 0.1;
         var dx2 = evt.detail.extent.x / 2.0;
         var dz2 = evt.detail.extent.z / 2.0;
-        var bbox = plane.querySelector('.bbox');
+        var bbox = plane;
         if (!bbox.v1) { bbox.v1 = new THREE.Vector3(); }
         if (!bbox.v2) { bbox.v2 = new THREE.Vector3(); }
         if (!bbox.v3) { bbox.v3 = new THREE.Vector3(); }
         if (!bbox.v4) { bbox.v4 = new THREE.Vector3(); }
-        bbox.v1.set(dx2, 0, dz2);
-        bbox.v2.set(dx2, 0, -dz2);
-        bbox.v3.set(-dx2, 0, -dz2);
-        bbox.v4.set(-dx2, 0, dz2);        
+        bbox.v1.set(dx2, y, dz2);
+        bbox.v2.set(dx2, y, -dz2);
+        bbox.v3.set(-dx2, y, -dz2);
+        bbox.v4.set(-dx2, y, dz2);        
         // Does this need to be done each time?
-        //bbox.removeAttribute('line__1');
-        bbox.setAttribute('line__1', {color:colorToUse, opacity:1, start:bbox.v1, end:bbox.v2});
-        //bbox.removeAttribute('line__2');
+        bbox.setAttribute('line__1', {start:bbox.v1, end:bbox.v2});
+        bbox.components['line__1'].geometry.verticesNeedUpdate = true;
         bbox.setAttribute('line__2', {color:colorToUse, opacity:1, start:bbox.v2, end:bbox.v3});
-        //bbox.removeAttribute('line__3');
         bbox.setAttribute('line__3', {color:colorToUse, opacity:1, start:bbox.v3, end:bbox.v4});
-        //bbox.removeAttribute('line__4');
         bbox.setAttribute('line__4', {color:colorToUse, opacity:1, start:bbox.v4, end:bbox.v1});
 
         // Fill out the plane label with informative text.
