--- a/public/index.html
+++ b/public/index.html
@@ -122,8 +122,8 @@ this should now be done in the bowels of aframe-ar, until no longer required...
           plane.setAttribute('geometry', 'primitive:polygon; vertices:' 
                                          + evt.detail.vertices.join(','));
         } else {
-          plane.setAttribute('geometry', 'primitive:box; width:' + evt.detail.extent.x +
-                                         '; height:0; depth:' + evt.detail.extent.z);        
+          plane.setAttribute('geometry', 'primitive:box; width:' + evt.detail.extent.x
+                                         + '; height:0; depth:' + evt.detail.extent.z);        
         }
         
         // Update the bounding box.
