--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ AFRAME.registerGeometry('polygon', {
 
           // If we have vertices, use polygon geometry
           if (anchor.vertices) {
-            plane.setAttribute('geometry', {primitive:'polygon', vertices: evt.detail.vertices});
+            plane.setAttribute('geometry', {primitive:'polygon', vertices: anchor.vertices});
           } else {
             plane.setAttribute('geometry', 'primitive:box; width:' + dx +
                                            '; height:0.001; depth:' + dz);                    
